# Software-Design

./: .gitignore  README.md
cpp_impl/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  None  cmake_install.cmake  main.cpp  tests.pro  untitled2.pro
cpp_impl/Testing/Temporary/: CTestCostData.txt
cpp_impl/config/: mysql.config  postgres.config
cpp_impl/controllers/: authcontroller.cpp  authcontroller.h  groupcontroller.cpp  groupcontroller.h  studentcontroller.cpp  studentcontroller.h  subjectconstroller.cpp  subjectconstroller.h  teachercontroller.cpp  teachercontroller.h
cpp_impl/docs/diags/: teacherUseCase.drawio
cpp_impl/entity/: auth.cpp  auth.h  group.cpp  group.h  student.cpp  student.h  subject.cpp  subject.h  teacher.cpp  teacher.h
cpp_impl/exceptions/: exception.cpp  exception.h
cpp_impl/repositories/: authrepository.cpp  authrepository.h  grouprepository.cpp  grouprepository.h  studentRepositoryImplPG.h  studentrepository.cpp  studentrepository.h  subjectRepositoryImplPG.h  subjectrepository.cpp  subjectrepository.h  teacherRepositoryImplPG.h  teacherrepository.cpp  teacherrepository.h
cpp_impl/repository_impl/: authrepositoryimplmysql.cpp  authrepositoryimplmysql.h  authrepositoryimplpg.cpp  authrepositoryimplpg.h  grouprepositoryimplmysql.cpp  grouprepositoryimplmysql.h  grouprepositoryimplpg.cpp  grouprepositoryimplpg.h  querygenerators.cpp  querygenerators.h  studentrepositoryimplmysql.cpp  studentrepositoryimplmysql.h  studentrepositoryimplpg.cpp  studentrepositoryimplpg.h  subjectrepositoryimplmysql.cpp  subjectrepositoryimplmysql.h  subjectrepositoryimplpg.cpp  subjectrepositoryimplpg.h  teacherrepositoryimplmysql.cpp  teacherrepositoryimplmysql.h  teacherrepositoryimplpg.cpp  teacherrepositoryimplpg.h
cpp_impl/testrepository/: CMakeLists.txt  pg_tests.cpp  testauthrepository.cpp  testauthrepository.h  testgrouprepository.cpp  testgrouprepository.h  testroomrepo.cpp  tests.cpp  teststudentrepository.cpp  teststudentrepository.h  testsubjectrepository.cpp  testsubjectrepository.h  testteacherrepository.cpp  testteacherrepository.h
cpp_impl/tui/: admindisplay.cpp  admindisplay.h  authdisplay.cpp  authdisplay.h  display.h  studentdisplay.cpp  studentdisplay.h  teacherdisplay.cpp  teacherdisplay.h
cpp_impl/tui/facades/: authfacade.cpp  authfacade.h  studentfacade.cpp  studentfacade.h  teacherfacade.cpp  teacherfacade.h
lab_01/: readme.md
lab_01/diags/: erDiagram  schoolAdministratorUseCase.drawio  studentUseCase
lab_02/: readme.md
lab_02/diags/: erDiagram  schoolAdministratorUseCase.drawio  studentUseCase  teacherUseCase.drawio  uml_diagram
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  inputdialog.cpp  inputdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  studentdialog.cpp  studentdialog.h  untitled6
src/config/: config.cpp  config.h
src/controllers/: authcontroller.cpp  studentcontroller.cpp
src/entity/: group.h
src/exceptions/: exception.cpp  exception.h
src/logger/: logger.cpp  logger.h
src/repositories/: authrepository.cpp  authrepository.h  studentrepository.cpp  subjectrepository.cpp  subjectrepository.h
src/repository_impl/: authrepositoryimplmysql.cpp  authrepositoryimplmysql.h  authrepositoryimplpg.cpp  authrepositoryimplpg.h  grouprepositoryimplmysql.cpp  grouprepositoryimplmysql.h  grouprepositoryimplpg.cpp  grouprepositoryimplpg.h  studentrepositoryimplmysql.cpp  studentrepositoryimplmysql.h  studentrepositoryimplpg.cpp  studentrepositoryimplpg.h  subjectrepositoryimplmysql.cpp  subjectrepositoryimplmysql.h  subjectrepositoryimplpg.cpp  subjectrepositoryimplpg.h  teacherrepositoryimplmysql.cpp  teacherrepositoryimplmysql.h  teacherrepositoryimplpg.cpp  teacherrepositoryimplpg.h
src/softwaredesign/: pom.xml
src/softwaredesign/src/main/java/com/softwaredesign/softwaredesign/: SoftwaredesignApplication.java
src/softwaredesign/src/main/java/com/softwaredesign/softwaredesign/controller/: GroupController.java  StudentController.java  SubjectController.java  TeacherController.java  UserController.java
src/softwaredesign/src/main/java/com/softwaredesign/softwaredesign/entity/: Group.java  Student.java  Subject.java  Teacher.java  User.java
src/softwaredesign/src/main/java/com/softwaredesign/softwaredesign/exception/: DatabaseAccessException.java
src/softwaredesign/src/main/java/com/softwaredesign/softwaredesign/repository/: GroupRepository.java  StudentRepository.java  SubjectRepository.java  TeacherRepository.java  UserRepository.java
src/softwaredesign/src/main/resources/: application.properties
src/softwaredesign/src/test/java/com/softwaredesign/softwaredesign/: SoftwaredesignApplicationTests.java
src/softwaredesign/src/test/java/com/softwaredesign/softwaredesign/controller/: GroupControllerTest.java  StudentControllerTest.java  SubjectControllerTest.java  TeacherControllerTest.java  UserControllerTest.java
src/softwaredesign/src/test/java/com/softwaredesign/softwaredesign/repository/: StudentRepositoryTest.java  SubjectRepositoryTest.java  TeacherLoginRepositoryTest.java  TeacherRepositoryTest.java  UserRepositoryTest.java
src/untitled6_autogen/: mocs_compilation.cpp
src/untitled6_autogen/EWIEGA46WW/: moc_inputdialog.cpp  moc_inputdialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_studentdialog.cpp  moc_studentdialog.cpp.d
src/untitled6_autogen/include/: ui_mainwindow.h
